<resources>
    <string name="app_name">IncomeCal</string>
    <string name="gross_annual_income">Gross annual income</string>
    <string name="total_tax">Total Tax</string>
    <string name="total_tax_amount">Total Tax Amount</string>
    <string name="federal_tax">Federal Tax</string>
    <string name="federal_tax_amount">Federal Tax Amount</string>
    <string name="cpp_ei_premiums_amount">CPP/EI premiums amount</string>
    <string name="cpp_ei_premiums">CPP/EI premiums</string>
    <string name="provincial_tax">Provincial Tax</string>
    <string name="provincial_tax_amount">Provincial Tax Amount</string>
    <string name="after_tax_income">After-tax income</string>
    <string name="after_tax_income_amount">After-tax income amount</string>
    <string name="working_hours">Working Hours</string>
    <string name="hourly_wage">Hourly Wage</string>
    <array name="province">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Northwest Territories</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Yukon</item>
    </array>
</resources>