<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gross_annual_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gross_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gross_annual_income"
            android:inputType="number"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gross_annual_income"
        tools:layout_editor_absoluteX="1dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <TextView
            android:id="@+id/total_tax_text_view"
            android:hint="@string/total_tax"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_column="1"                />
        <TextView
            android:id="@+id/total_tax_amount_text_view"
            android:hint="@string/total_tax_amount"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_column="2"                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/federal_tax_text_view"
                android:hint="@string/federal_tax"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:layout_column="1"                />
            <TextView
                android:id="@+id/federal_tax_amount_text_view"
                android:hint="@string/federal_tax_amount"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_column="2"                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/provincial_tax_text_view"
                android:hint="@string/provincial_tax"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:layout_column="1"                />
            <TextView
                android:id="@+id/provincial_tax_amount_text_view"
                android:hint="@string/provincial_tax_amount"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_column="2"                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/cpp_ei_premiums_text_view"
                android:hint="@string/cpp_ei_premiums"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:layout_column="1"                />
            <TextView
                android:id="@+id/cpp_ei_premiums_amount_text_view"
                android:hint="@string/cpp_ei_premiums_amount"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_column="2"                />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/after_tax_income_text_view"
                android:hint="@string/after_tax_income"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_column="1"                />
            <TextView
                android:id="@+id/after_tax_income_amount_text_view"
                android:hint="@string/after_tax_income_amount"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_column="2"                />

        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>